--- a/styles/header.css
+++ b/styles/header.css
@@ -4,6 +4,17 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+
+    background-color: white;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: rgb(229, 229, 229);
 }
 
 .left-section {
@@ -14,7 +25,7 @@
 .hamburger-menu {
     height: 24px;
     margin-left: 24px;
-    margin-right: 20px;
+    margin-right: 24px;
 }
 
 .youtube-logo {
@@ -43,7 +54,7 @@
 
 .search-bar::placeholder {
     font-family: Roboto, Arial;
-    font-family: 16px;
+    font-size: 16px;
 }
 
 .search-button {
@@ -56,10 +67,49 @@
     margin-left: -1px;
     margin-right: 10px;
 }
+.search-button,
+.voice-search-button,
+.uplodad-icon-container,
+.youtube-apps-icon-container,
+.notifications-icon-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.search-button .tooltip,
+.voice-search-button .tooltip,
+.uplodad-icon-container .tooltip,
+.youtube-apps-icon-container .tooltip,
+.notifications-icon-container .tooltip {
+    font-family: Roboto, Arial;
+    position: absolute;
+    background-color: grey;
+    color: white;
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    border-radius: 2px;
+    font-size: 12px;
+    bottom: -30px;
+    opacity: 0;
+    transition: opacity 0.15s;
+    pointer-events: none;
+    white-space: nowrap;
+}
+
+.search-button:hover .tooltip,
+.voice-search-button:hover .tooltip,
+.uplodad-icon-container:hover .tooltip,
+.youtube-apps-icon-container:hover .tooltip,
+.notifications-icon-container:hover .tooltip {
+    opacity: 1;
+}
 
 .search-icon {
     height: 25px;
-    margin-top: 4px;;
 }
 
 .voice-search-button {
@@ -72,7 +122,6 @@
 
 .voice-search-icone {
     height: 24px;
-    margin-top: 4px;
 }
 .right-section {
     width: 180px;
@@ -91,6 +140,25 @@
 }
 .notifications-icon {
     height: 24px;
+}
+
+.notifications-icon-container {
+ position: relative;
+}
+
+.notifications-count{
+    position: absolute;
+    top: -2px;
+    right: -5px;
+    background-color: red;
+    color: white;
+    font-family: Roboto, Arial;
+    font-size: 11px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    border-radius: 10px;
 }
 .current-user-picture{
     height: 32px;
